Fixed alignment

--- a/css/thanks.css
+++ b/css/thanks.css
@@ -554,44 +554,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
-.grid {
-  display: grid;
-}
-
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -602,46 +564,10 @@ body {
 }
 
 #globalContainer {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  #globalContainer {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  #globalContainer {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  #globalContainer {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  #globalContainer {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  #globalContainer {
-    max-width: 1536px;
-  }
-}
-
-#globalContainer {
   display: grid;
   height: 100vh;
   width: 100vw;
-  align-items: center;
-  justify-content: center;
-  vertical-align: middle;
+  place-items: center;
 }
 
 #thanksContainer {
